--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "name": "test",
-  "version": "0.0.1",
   "description": "test description",
   "info": "test info",
   "private": true,
@@ -11,8 +10,6 @@
       "email": "a@gmail.com"
     }
   ],
-  "keywords": [
-    "best_ecosystem"
-  ],
+  "keywords": [ "best_ecosystem" ],
   "homepage": "asd"
 }
