--- a/package.json
+++ b/package.json
@@ -11,6 +11,6 @@
       "email": "a@gmail.com"
     }
   ],
-  "keywords": [ "best_ecosystem" ],
+  "keywords": [ "best_ecosystem", "solidhack" ],
   "homepage": "asd"
 }
