--- a/package.json
+++ b/package.json
@@ -9,6 +9,18 @@
     {
       "name": "a",
       "email": "a@gmail.com"
+    },
+    {
+      "name": "a",
+      "email": "a@gmail.com"
+    },
+    {
+      "name": "a",
+      "email": "a@gmail.com"
+    },
+    {
+      "name": "a",
+      "email": "a@gmail.com"
     }
   ],
   "keywords": [ "best_app", "solidhack" ],
