--- a/package.json
+++ b/package.json
@@ -7,20 +7,7 @@
   "license": "MIT",
   "contributors": [
     {
-      "name": "a",
-      "email": "a@gmail.com"
-    },
-    {
-      "name": "a",
-      "email": "a@gmail.com"
-    },
-    {
-      "name": "a",
-      "email": "a@gmail.com"
-    },
-    {
-      "name": "a",
-      "email": "a@gmail.com"
+      "name": "a"
     }
   ],
   "keywords": [ "best_app", "solidhack" ],
