--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "license": "MIT",
   "contributors": [
     {
-      "name": "a"
+      "name": "a",
+      "email": "a@a.a"
     }
   ],
   "keywords": [ "best_app", "solidhack" ],
